--- a/static/index.html
+++ b/static/index.html
@@ -30,31 +30,31 @@
         }
     </style>
 
-    <title>PlaceNL Commando</title>
+    <title>🇫🇷 Quartier Général France</title>
 </head>
 
 <body>
     <div class="card">
         <div class="card-body text-center">
             <h1 data-statistic="connectionCount" class="odometer large-statistic">0</h1>
-            <h3>clients verbonden</h3>
+            <h3>🇫🇷 Patriotes connectés 🇫🇷</h3>
         </div>
     </div>
     <div class="card">
         <div class="card-body text-center">
             <img class="current-order" width="1000" height="500" style="border: 1px solid black;" />
-            <h3>huidige orders</h3>
+            <h3>carte en cours de réalisation</h3>
         </div>
     </div>
     <div class="card">
         <div class="card-body text-center">
-            <h3>ordergeschiedenis</h3>
+            <h3>Historique</h3>
             <ul class="list-group list-group-flush maphistory">
             </ul>
         </div>
     </div>
 
-    <a href="/update.html" class="text-muted text-decoration-none">order control</a>
+    <a href="/update.html" class="text-muted text-decoration-none">Salle de commandement</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
