--- a/static/update.html
+++ b/static/update.html
@@ -9,28 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>PlaceNL Commando</title>
+    <title>🇫🇷 Quartier Général France</title>
 </head>
 
 <body>
     <div class="card">
         <div class="card-body">
-            <h3>Nieuwe orders uploaden</h3>
+            <h3>Nouvel ordre d'envoi</h3>
             <form method="POST" action="/updateorders" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <label for="image" class="form-label">Nieuwe orders</label>
+                    <label for="image" class="form-label">Nouvelle image</label>
                     <input class="form-control" type="file" id="image" name="image" accept="image/png" required>
                 </div>
                 <div class="mb-3">
-                    <label for="reason" class="form-label">Reden</label>
+                    <label for="reason" class="form-label">Raison</label>
                     <input type="text" class="form-control" id="reason" name="reason" required>
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Wachtwoord</label>
+                    <label for="password" class="form-label">Mot de passe</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-primary">Opslaan!</button>
+                    <button type="submit" class="btn btn-primary">Envoyer</button>
                 </div>
             </form>
         </div>
